# v4l-utils

./: configure.ac
lib/: Makefile.am
lib/include/: libmediactl.h
lib/libmediactl/: Makefile.am  libmediactl.c
utils/media-ctl/: Makefile.am  libv4l2subdev.c  media-ctl.c
